# tgstation_compile_monitor

./: .gitignore  Cargo.toml  compile_data_cache.json  service.sh  yelled_about_and_when.json
src/: conf.rs  fetch_compile_data.rs  main.rs  webhook.rs  yaaw.rs
