[package]
name = "tgstation_compile_monitor"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"

[dependencies]
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
chrono = "0.4.38"
ctrlc = "3.4.4"
sysinfo = "0.30.12"
